# rover-rick-sim

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: dual_ekf.yaml  nav2_params_humble.yaml
launch/: display.launch.py
meshes/base/: base_body.stl
meshes/links/: connecting_rod.3mf  main_rocker_left.3mf  main_rocker_right.3mf  secondary_rocker_left.3mf  secondary_rocker_right.3mf
rviz/: urdf_config.rviz
src/description/: camera_description.urdf  colour_description.urdf  gps_description.urdf  imu_description.urdf  lidar_description.urdf  rover_rick.urdf.xacro  rover_rick_description.urdf  wheel_description.urdf
world/: actually_empty_world.world  agriculture_geometry.urdf.xacro  my_world.sdf
